Added all demos in all modes to demo-page. Currently only some of those really work.
svn changeset:105 branch:toolkit

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>enably-toolkit</display-name>
-	
+
+<!-- APPLICATION: ...demo.features -->
+    <servlet>
+        <servlet-name>features-ajax</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.ajax.AjaxAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.features.FeaturesApplication</param-value>
+        </init-param>
+    </servlet>    
+    <servlet-mapping>
+        <servlet-name>features-ajax</servlet-name>
+        <url-pattern>/demo/features/ajax/*</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>features-web</servlet-name>
         <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
@@ -14,25 +27,42 @@
             <param-value>false</param-value>
         </init-param>
     </servlet>
-    
-    <servlet>
-        <servlet-name>features-ajax</servlet-name>
-        <servlet-class>com.itmill.toolkit.terminal.ajax.AjaxAdapterServlet</servlet-class>
-        <init-param>
-            <param-name>application</param-name>
-            <param-value>com.itmill.toolkit.demo.features.FeaturesApplication</param-value>
-        </init-param>
-    </servlet>    
-
     <servlet-mapping>
         <servlet-name>features-web</servlet-name>
         <url-pattern>/demo/features/web/*</url-pattern>
     </servlet-mapping>
-    
+
+
+<!-- APPLICATION: ...demo.table -->
+    <servlet>
+        <servlet-name>table-ajax</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.ajax.AjaxAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.table.TableDemoApplication</param-value>
+        </init-param>
+    </servlet>    
     <servlet-mapping>
-        <servlet-name>features-ajax</servlet-name>
-        <url-pattern>/demo/features/ajax/*</url-pattern>
-    </servlet-mapping>    
+        <servlet-name>table-ajax</servlet-name>
+        <url-pattern>/demo/table/ajax/*</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>table-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.table.TableDemoApplication</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>table-web</servlet-name>
+        <url-pattern>/demo/table/web/*</url-pattern>
+    </servlet-mapping>
+
 
 <!-- APPLICATION: ...demo.calc -->
     <servlet>
@@ -47,6 +77,23 @@
         <servlet-name>calc-ajax</servlet-name>
         <url-pattern>/demo/calc/ajax/*</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>calc-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.Calc</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>table-web</servlet-name>
+        <url-pattern>/demo/calc/web/*</url-pattern>
+    </servlet-mapping>
+
 
 <!-- APPLICATION: ...demo.chat -->
     <servlet>
@@ -61,6 +108,23 @@
         <servlet-name>chat-ajax</servlet-name>
         <url-pattern>/demo/chat/ajax/*</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>chat-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.Chat</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>chat-web</servlet-name>
+        <url-pattern>/demo/chat/web/*</url-pattern>
+    </servlet-mapping>
+
 
 <!-- APPLICATION: ...demo.Hello -->
     <servlet>
@@ -75,6 +139,23 @@
         <servlet-name>hello-ajax</servlet-name>
         <url-pattern>/demo/hello/ajax/*</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>hello-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.HelloWorld</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>hello-web</servlet-name>
+        <url-pattern>/demo/hello/web/*</url-pattern>
+    </servlet-mapping>
+
 
 <!-- APPLICATION: ...demo.Login -->
     <servlet>
@@ -89,7 +170,53 @@
         <servlet-name>login-ajax</servlet-name>
         <url-pattern>/demo/login/ajax/*</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>login-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.Login</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login-web</servlet-name>
+        <url-pattern>/demo/login/web/*</url-pattern>
+    </servlet-mapping>
 
+
+<!-- APPLICATION: ...demo.GoGame -->
+    <servlet>
+        <servlet-name>gogame-ajax</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.ajax.AjaxAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.gogame.Go</param-value>
+        </init-param>
+    </servlet>    
+    <servlet-mapping>
+        <servlet-name>gogame-ajax</servlet-name>
+        <url-pattern>/demo/gogame/ajax/*</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>gogame-web</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.WebAdapterServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.gogame.Go</param-value>
+        </init-param>
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>gogame-web</servlet-name>
+        <url-pattern>/demo/gogame/web/*</url-pattern>
+    </servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
