--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,6 +2,32 @@
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>IT Mill Toolkit</display-name>
 
+	<servlet>
+        <servlet-name>LayoutDemo</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.LayoutDemo</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LayoutDemo</servlet-name>
+        <url-pattern>/LayoutDemo/*</url-pattern>
+    </servlet-mapping>
+    
+	<servlet>
+        <servlet-name>SelectDemo</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.SelectDemo</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SelectDemo</servlet-name>
+        <url-pattern>/SelectDemo/*</url-pattern>
+    </servlet-mapping>
+    
     <servlet>
         <servlet-name>features</servlet-name>
         <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
@@ -20,7 +46,7 @@
         <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
         <init-param>
             <param-name>application</param-name>
-            <param-value>com.itmill.toolkit.example.Parameters</param-value>
+            <param-value>com.itmill.toolkit.demo.Parameters</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
@@ -145,7 +171,6 @@
         <url-pattern>/shortcut/*</url-pattern>
     </servlet-mapping>
     
-
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -154,4 +179,5 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
 </web-app>
