--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,6 +3,19 @@
 	<display-name>IT Mill Toolkit</display-name>
 
 	<servlet>
+        <servlet-name>SelectDemo</servlet-name>
+        <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
+        <init-param>
+            <param-name>application</param-name>
+            <param-value>com.itmill.toolkit.demo.SelectDemo</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SelectDemo</servlet-name>
+        <url-pattern>/SelectDemo/*</url-pattern>
+    </servlet-mapping>
+    
+	<servlet>
         <servlet-name>BufferedComponents</servlet-name>
         <servlet-class>com.itmill.toolkit.terminal.web.ApplicationServlet</servlet-class>
         <init-param>
